complete competition, activity, and maintenance flows